updated appointments and contact pages

--- a/frontend/src/CustomCalendar.css
+++ b/frontend/src/CustomCalendar.css
@@ -25,3 +25,18 @@
 .react-calendar__tile:hover {
     background-color: #e0e0e0;
 }
+
+.spinner {
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-top-color: #ffffff;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
